2023-11-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.56

2023-02-02  Morten Welinder <terra@gnome.org>

	* Release 1.12.55

2023-01-19  Morten Welinder <terra@gnome.org>

	* Release 1.12.54

2022-09-25  Morten Welinder  <terra@gnome.org>

	* html_read.c: Improve whitespace handling.  Based on patch from
	John Denker.  [#671]

2022-09-17  Morten Welinder <terra@gnome.org>

	* Release 1.12.53

2022-08-31  Morten Welinder  <terra@gnome.org>

	* html_read.c (html_read_row): Use sheet_cell_set_text so formulas
	get marked for recalc.

2022-04-18  Morten Welinder <terra@gnome.org>

	* Release 1.12.52

2022-01-20  Morten Welinder <terra@gnome.org>

	* Release 1.12.51

2021-06-10  Morten Welinder <terra@gnome.org>

	* Release 1.12.50

2021-03-29  Morten Welinder  <terra@gnome.org>

	* html.c (html_write_cell_content): Export also external (file)
	links.

2021-03-14  Morten Welinder <terra@gnome.org>

	* Release 1.12.49

2020-08-12  Morten Welinder <terra@gnome.org>

	* Release 1.12.48

2020-05-13  Andreas J. Guelzow <aguelzow@pyrshep.ca>

    * latex.c (latex_file_save): use "1*" before \ratio

2020-05-09  Morten Welinder <terra@gnome.org>

	* Release 1.12.47

2019-11-06  Morten Welinder <terra@gnome.org>

	* Release 1.12.46

2019-10-31  Morten Welinder  <terra@gnome.org>

	* html_read.c (html_file_open): Improve BOM handling.  See #392.

2019-05-20  Morten Welinder <terra@gnome.org>

	* Release 1.12.45

2018-11-24  Morten Welinder <terra@gnome.org>

	* Release 1.12.44

2018-08-19  Morten Welinder <terra@gnome.org>

	* Release 1.12.43

2018-08-09  Morten Welinder <terra@gnome.org>

	* Release 1.12.42

2018-05-07  Morten Welinder <terra@gnome.org>

	* Release 1.12.41

2018-04-29  Morten Welinder <terra@gnome.org>

	* Release 1.12.40

2018-03-13  Morten Welinder <terra@gnome.org>

	* Release 1.12.39

2017-12-28  Morten Welinder <terra@gnome.org>

	* Release 1.12.38

2017-12-01  Morten Welinder <terra@gnome.org>

	* Release 1.12.37
