@@ -1,3 +1,8 @@
+2023-11-05  Morten Welinder  <terra@gnome.org>
+
+	* html.c (html_write_cell_content): Make an attempt at exporting
+	underline better.
+
 2023-11-02  Morten Welinder <terra@gnome.org>
 
 	* Release 1.12.56
